--- a/ViecCanLam/app/src/main/res/layout/activity_main.xml
+++ b/ViecCanLam/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/Item1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 1"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="6dp" />
 
@@ -18,7 +18,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 2"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="36dp" />
 
@@ -26,7 +26,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 3"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="64dp" />
 
@@ -34,7 +34,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 4"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="91dp" />
 
@@ -42,7 +42,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 5"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="117dp" />
 
@@ -50,7 +50,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 6"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="144dp" />
 
@@ -58,23 +58,34 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Item 7"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="173dp" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="199dp" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="225dp" />
+        android:text="Item 9"
+        tools:layout_editor_absoluteX="9dp"
+        tools:layout_editor_absoluteY="224dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Item 8"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="197dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
